# como

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  test-cross-platform.sh  test-local.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.github/workflows_disabled/: release.yml
src/: cli.rs  lib.rs  main.rs  models.rs  storage.rs
