[package]
name = "cli-rust-como"
version = "0.1.0"
edition = "2021"
authors = ["kubotazen"]
description = "A simple CLI task manager for Mac"
license = "MIT"
repository = "https://github.com/kubotazen/como"
keywords = ["cli", "task-manager", "productivity", "todo"]
categories = ["command-line-utilities"]

[[bin]]
name = "como"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
anyhow = "1.0"
