[package]
name = "cli-rust-como"
version = "0.1.0"
edition = "2021"
authors = ["kubotazen"]
description = "A simple CLI task manager for Windows, macOS, and Linux"
license = "MIT"
repository = "https://github.com/ze-sudo/como"
keywords = ["cli", "task-manager", "productivity", "todo", "cross-platform"]
categories = ["command-line-utilities"]
readme = "README.md"
homepage = "https://github.com/ze-sudo/como"

[[bin]]
name = "como"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
anyhow = "1.0"
